# slackbot_bs

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  requirements.txt  setup.cfg  slackbot-example.yml  tox.ini
.github/: ISSUE_TEMPLATE.md
docker/: Dockerfile  docker-compose.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
slackbot_bs/: __init__.py  bot.py  bot2.py  buzzword.py  cli_helper.py  constants.py  slackbot_bs.py  table_flip.py
slackbot_bs/cmds/: slack.py
slackbot_bs/conf/: __init__.py  common.py  log.py  opts.py  slack.py
slackbot_bs/logging/: log.py  rich.py
slackbot_bs/utils/: __init__.py
tests/: __init__.py  test_slackbot_bs.py
