[metadata]
name = slackbot_bs
author = Walter A. Boring IV
author_email = waboring@hemna.com
python_requires = >=3.5
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software license
    Natural Language :: English
    'Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

description-file =
    README.rst

[entry_points]
console_scripts =
   slackbot_bs = slackbot_bs.bot:main

[files]
packages =
    slackbot_bs

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:slackbot_bs/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here

